Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="heart">
-        <p>✨Carla, eres ese pedacito de calma que aparece justo cuando lo necesito. No sé cómo explicarlo, pero hablar contigo siempre me mejora el día. A veces siento que sin darte cuenta te has vuelto una persona especial para mí.✨</p>
+        <p>✨Carla, eres ese pedacito de calma que aparece justo cuando lo necesito. No sé cómo explicarlo, 
+            pero hablar contigo siempre me mejora el día. A veces siento que sin darte cuenta te has vuelto 
+            una persona especial para mí.✨</p>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
