Fix HTML formatting and content structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="heart">
         <p>✨Carla, eres ese pedacito de calma que aparece justo cuando lo necesito. No sé cómo explicarlo, 
-            pero hablar contigo siempre me mejora el día. A veces siento que sin darte cuenta te has vuelto 
+            pero hablar contigo siempre me mejora el día. A veces siento que sin darme cuenta te has vuelto 
             una persona especial para mí.✨</p>
 
     </div>
@@ -26,4 +26,5 @@
     </script>
     
 </body>
+
 </html>
